--- a/themes/forty/theme.toml
+++ b/themes/forty/theme.toml
@@ -16,3 +16,7 @@ min_version = "0.55"
   author = "AJ"
   name = "HTML5 Up"
   homepage = "https://html5up.net/forty"
+[sitemap]
+  changefreq = "monthly"
+  filename = "sitemap.xml"
+  priority = 0.5
