--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,8 +1,9 @@
 backend:
   name: git-gateway
   branch: develop # Branch to update (optional; defaults to master)
-media_folder: static/img
-public_folder: /img
+
+media_folder: "static/img"
+public_folder: "img"
 collections:
   - name: 'blog'
     label: 'Blog'
