--- a/admin/config.yml
+++ b/admin/config.yml
@@ -2,13 +2,14 @@ backend:
   name: git-gateway
   branch: develop # Branch to update (optional; defaults to master)
 
+display_url: https://maquillajeasturias.netlify.com
 publish_mode: editorial_workflow
 media_folder: "static/img"
-public_folder: "img"
+public_folder: "/img"
 collections:
   - name: 'blog'
     label: 'Blog'
-    folder: 'content/blogs'
+    folder: 'blogs'
     create: true
     slug: '{{year}}-{{month}}-{{day}}-{{slug}}'
     editor:
