--- a/themes/forty/static/admin/config.yml
+++ b/themes/forty/static/admin/config.yml
@@ -9,7 +9,7 @@ public_folder: "/img"
 collections:
   - name: 'blog'
     label: 'Blog'
-    folder: 'blogs'
+    folder: 'content/blogs'
     create: true
     slug: '{{year}}-{{month}}-{{day}}-{{slug}}'
     editor:
