--- a/themes/forty/static/admin/config.yml
+++ b/themes/forty/static/admin/config.yml
@@ -17,10 +17,25 @@ collections:
     fields:
       - { label: 'Title', name: 'title', widget: 'string' }
       - { label: 'Description', name: 'description', widget: 'string' }
-      - { label: 'Image', name: 'image', widget: 'image' }
+      - { label: 'Image', name: 'image', widget: 'image', required: 'true' }
       - { label: 'Slug', name: 'slug', widget: 'string' }
-      - { label: 'Keywords', name: 'keywords', widget: 'string' }
+      - { label: 'Keywords', name: 'keywords', widget: 'string', required: 'false' }
       - { label: 'ButtonText', name: 'buttontext', widget: 'string' } 
-      - { label: 'Categories', name: 'categories', widget: 'list' }
+      - { label: 'Categories', name: 'categories', widget: 'list' , required: 'false' }
       - { label: 'Publish Date', name: 'date', widget: 'datetime' }
       - { label: 'Body', name: 'body', widget: 'markdown' }
+  - name: 'calendar'
+    label: 'Calendar'
+    file: 'data/calendar.json'
+    fields: 
+      - {label: Enable, name: enable, widget: select, options: [true, false]}
+      - {label: Subtitle, name: subtitle, widget: string}
+      - {label: Title, name: title, widget: string}
+      - label: Events
+        name: events
+        widget: list
+        fields:
+          - {label: Event, name: event, widget: string}
+          - {label: Day, name: day, widget: number}
+          - {label: Month, name: month, widget: string}
+          - {label: Year, name: year, widget: number}
