--- a/themes/forty/static/admin/config.yml
+++ b/themes/forty/static/admin/config.yml
@@ -26,7 +26,7 @@ collections:
       - { label: 'Body', name: 'body', widget: 'markdown' }
   - name: 'calendar'
     label: 'Calendar'
-    file: 'data/calendar.json'
+    files: 'data/calendar.json'
     fields: 
       - {label: Enable, name: enable, widget: boolean}
       - {label: Subtitle, name: subtitle, widget: string}
