--- a/themes/forty/static/admin/config.yml
+++ b/themes/forty/static/admin/config.yml
@@ -17,11 +17,11 @@ collections:
     fields:
       - { label: 'Title', name: 'title', widget: 'string' }
       - { label: 'Description', name: 'description', widget: 'string' }
-      - { label: 'Image', name: 'image', widget: 'image', required: 'true' }
+      - { label: 'Image', name: 'image', widget: 'image' }
       - { label: 'Slug', name: 'slug', widget: 'string' }
-      - { label: 'Keywords', name: 'keywords', widget: 'string', required: 'false' }
+      - { label: 'Keywords', name: 'keywords', widget: 'string', required: false }
       - { label: 'ButtonText', name: 'buttontext', widget: 'string' } 
-      - { label: 'Categories', name: 'categories', widget: 'list' , required: 'false' }
+      - { label: 'Categories', name: 'categories', widget: 'list' , required: false }
       - { label: 'Publish Date', name: 'date', widget: 'datetime' }
       - { label: 'Body', name: 'body', widget: 'markdown' }
   - name: 'pages'
