--- a/themes/forty/static/admin/config.yml
+++ b/themes/forty/static/admin/config.yml
@@ -110,6 +110,7 @@ collections:
               - {label: Name, name: name, widget: string}
               - {label: URL, name: url, widget: string}
       - label: 'Show'
+        name: ''
         file: 'data/showcase.json'
         fields: 
           - label: MainPage
@@ -121,6 +122,7 @@ collections:
               - {label: Title, name: Title, widget: string}
               - {label: URL, name: url, widget: string}
       - label: 'Social'
+        name: ''
         file: 'data/social.json'
         fields: 
           - label: Apps
