--- a/themes/forty/static/admin/config.yml
+++ b/themes/forty/static/admin/config.yml
@@ -54,7 +54,7 @@ collections:
         name: 'contact'
         file: 'data/contact.json'
         fields: 
-          - {label: General, name: general, widget: map}
+          - {label: General, name: general, widget: string}
           - label: Address
             name: address
             widget: list
@@ -110,7 +110,7 @@ collections:
               - {label: Name, name: name, widget: string}
               - {label: URL, name: url, widget: string}
       - label: 'Show'
-        name: ''
+        name: 'showcase'
         file: 'data/showcase.json'
         fields: 
           - label: MainPage
@@ -122,7 +122,7 @@ collections:
               - {label: Title, name: Title, widget: string}
               - {label: URL, name: url, widget: string}
       - label: 'Social'
-        name: ''
+        name: 'social'
         file: 'data/social.json'
         fields: 
           - label: Apps
