--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,9 @@
 version: 2
 jobs:
   build:
+    branches: 
+      only: 
+        - master
     docker:
       - image: cibuilds/hugo:0.55.6
     working_directory: ~/project
@@ -18,6 +21,9 @@ jobs:
       - run:
           name: Install awscli
           command: pip install awscli
+      - run: 
+          name: "Add BaseURL"
+          command: env HUGO_BASEURL="https://www.maquillajeasturias.com/"
       - run:
           name: "Run Hugo"
           command: hugo -v -s ~/project/ -d public
