Add hugo baseurl

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ jobs:
           command: pip install awscli
       - run:
           name: "Run Hugo"
-          command: env HUGO_BASEURL="https://www.maquillajeasturias.com/" hugo -v -s ~/project/ -d public
+          command: HUGO_BASEURL="https://www.maquillajeasturias.com/" hugo -v -s ~/project/ -d public
       - deploy:
           command: |
             if [ "${CIRCLE_BRANCH}" == "master" ]; then
